Ensure overflow is measured after density change

--- a/packages/mantine-react-table/src/components/body/MRT_TableBodyCell.module.css
+++ b/packages/mantine-react-table/src/components/body/MRT_TableBodyCell.module.css
@@ -76,7 +76,7 @@
 }
 
 .root-cell-hover-reveal {
-  overflow: visible
+  overflow: visible;
 }
 
 .cell-hover-reveal {
